[package]
name = "stackpng"
description = "A CLI tool for creating Minecraft-style animations from a PNG sequence"
repository = "https://github.com/wowkster/StackPNG"
version = "0.1.1"
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["minecraft"]
categories = ["command-line-utilities"]
exclude = [
    "examples/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
image = "0.24.5"
question = "0.2.2"
serde_json = "1.0.91"
